cheanged name, did some fixes in dockerfile

--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   app:
-    container_name: simple-app
+    container_name: Team5Project6
     build:
       context: ../
       dockerfile: deployments/app/Dockerfile
